--- a/_posts/0000-01-02-Lenever.md
+++ b/_posts/0000-01-02-Lenever.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+_I just edited from a review comment, I am **learning** a lot_
 Use the left arrow to go back!
